--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     </ul>
                                     <!-- Tab panes -->
                                     <div class="tab-content">
-                                        <div class="tab-pane w3ls-connexionForm active" id="Login">
+                                        <div class="tab-pane active" id="Login">
+										<div class= "w3ls-connexionForm">
                                             <form class="form-horizontal" action="#" method="get" id="loginForm">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
@@ -115,6 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 </div>
 												<div id="succesConnexion" class="col-sm-10"></div>
                                             </form>
+										</div>
 											<div class="col-sm-10 w3ls-validConnexionForm">
 												<form class="form-horizontal" id="sendCodeConxForm" action="#" method="get">
 													<div class="form-group">
