--- a/index.html
+++ b/index.html
@@ -986,6 +986,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	   $('#w3layouts-login').hide();
 	   $("#w3layouts-loged").hide();
 	   $('#w3layouts-forgotPassword').hide();
+	   $('#forgotPassword').hide();
 	   $('#sendForgotPassword').hide();
 	   $('#w3ls-validRegisterForm').hide();
 	    //check connexion 
