--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	      $('#loginForm').trigger("reset");
 	      //$('#Registration').show();
 	      $('#sendCodeConxForm').hide();
-		  $('#sendForgotPassword').hide();
+		  $('#forgotPassword').hide();
 	      $('#success').empty();
           $('#validSuccesConnexion').empty();
 		  $('#validForgotPassword').empty();
@@ -987,7 +987,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	   $("#w3layouts-loged").hide();
 	   $('#w3layouts-forgotPassword').hide();
 	   $('#forgotPassword').hide();
-	   $('#sendForgotPassword').hide();
 	   $('#w3ls-validRegisterForm').hide();
 	    //check connexion 
 	    if("firstname" in sessionStorage){
