--- a/index.html
+++ b/index.html
@@ -964,6 +964,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    
 	jQuery(document).ready(function($) {
             $("#deconnexion").click(function(event) {
+		alert("test");
                 sessionStorage.clear();
    		//$(location).attr('href','https://utility-dev.github.io/index.html');
             });
