--- a/index.html
+++ b/index.html
@@ -930,6 +930,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     scrollTop: $(this.hash).offset().top
                 }, 1000);
             });
+			
+			$("#deconnexion").click(function(event) {
+		    alert("test");
+            sessionStorage.clear();
+   		//$(location).attr('href','https://utility-dev.github.io/index.html');
+            });
         });
 	
 	jQuery(document).ready(function($) {
@@ -942,6 +948,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	      $('#success').empty();
               $('#succes').empty();
 	      $('#sendCodeForm').trigger("reset");
+            });
+			
+			$("#deconnexion").click(function(event) {
+		    alert("test");
+            sessionStorage.clear();
+   		//$(location).attr('href','https://utility-dev.github.io/index.html');
             });
         });
 		
@@ -960,6 +972,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	      $('#sendCodeConxForm').trigger("reset");
 		  $('#sendForgotPassword').trigger("reset");
             });
+			
+		  $("#deconnexion").click(function(event) {
+		    alert("test");
+            sessionStorage.clear();
+   		//$(location).attr('href','https://utility-dev.github.io/index.html');
+            });
         });
 	    
 	jQuery(document).ready(function($) {
@@ -973,6 +991,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	jQuery(document).ready(function($) {
             $("#compte").click(function(event) {
    		$(location).attr('href','https://utility-dev.github.io/plans.html');
+            });
+			
+			$("#deconnexion").click(function(event) {
+		    alert("test");
+            sessionStorage.clear();
+   		//$(location).attr('href','https://utility-dev.github.io/index.html');
             });
         });
 		
