--- a/plans.html
+++ b/plans.html
@@ -265,7 +265,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- plans -->
 <div class="w3layouts-content w3layouts-plans">
     <div class="container">
-			<h3 class="w3-head">Plans</h3>
+			<h3 class="w3-head" id="w3-head-welcome-msg"></h3>
+			<script>$("#w3-head-welcome-msg").html("Bonjour sessionStorage.getItem('firstname')")</scrip>
+	    			
 	<!--Horizontal Tab-->
         <div id="parentHorizontalTab">
             <ul class="resp-tabs-list hor_1">
