--- a/plans.html
+++ b/plans.html
@@ -266,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="w3layouts-content w3layouts-plans">
     <div class="container">
 			<h3 class="w3-head" id="w3-head-welcome-msg"></h3>
-			<script>$("#w3-head-welcome-msg").html("Bonjour sessionStorage.getItem('firstname')")</scrip>
+			<script>$("#w3-head-welcome-msg").html("Bonjour sessionStorage.getItem('firstname')")</script>
 	    			
 	<!--Horizontal Tab-->
         <div id="parentHorizontalTab">
