--- a/plans.html
+++ b/plans.html
@@ -825,6 +825,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<!-- //subscribe --> 
    <!--footer-->
+
+    <!--footer-->
     <footer>
         <div class="container-fluid">
             <div class="w3-agile-footer-top-at">
@@ -1043,7 +1045,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 cache: false,
                 success: function() {
                   $("#w3layouts-loged").removeAttr("style");
-		  $('#w3layouts-loged').html("<a id='compte' data-toggle='modal'  href='#' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='#' style='display : inline-block'>Deconnexion</a>"));
+		  $('#w3layouts-loged').html("<a id='compte' data-toggle='modal'  href='https://utility-dev.github.io/plans.html' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='https://utility-dev.github.io/index.html' style='display : inline-block' onClick='sessionStorage.clear();'>Deconnexion</a>"));
                 },
                 error: function() {
                     $('#w3layouts-login').removeAttr("style");
