redirection vers index pour non connectés

--- a/plans.html
+++ b/plans.html
@@ -1049,6 +1049,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 },
                 error: function() {
                     $('#w3layouts-login').removeAttr("style");
+                    window.location.replace("https://utility-dev.github.io/index.html");
                 },
             });
 	    /*if("firstname" in sessionStorage){
