--- a/plans.html
+++ b/plans.html
@@ -1048,8 +1048,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  $('#w3layouts-loged').html("<a id='compte' data-toggle='modal'  href='https://utility-dev.github.io/plans.html' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='https://utility-dev.github.io/index.html' style='display : inline-block' onClick='sessionStorage.clear();'>Deconnexion</a>"));
                 },
                 error: function() {
-                    $('#w3layouts-login').removeAttr("style");
                     window.location.replace("https://utility-dev.github.io/index.html");
+                    //$('#w3layouts-login').removeAttr("style");
                 },
             });
 	    /*if("firstname" in sessionStorage){
