remove besoin d'aide

--- a/plans.html
+++ b/plans.html
@@ -269,7 +269,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li>Mes  achats/réservations</li>
                 <li>Mes remboursements</li>
                 <li>Mon programme de fidélité</li>
-                <li>Besoins d'aide</li>
             </ul>
             <div class="resp-tabs-container hor_1">
                 <div>
@@ -673,106 +672,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </li>
                                             </ul>
                 </div>
-                <div>
-                    <ul class="w3ls-plan">
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 11</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>10 MB</p>
-                                    <p><strong>Validity: 1day</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 18</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>50 MB</p>
-                                    <p><strong>Validity: 7days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                         <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 39</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>200 MB</p>
-                                    <p><strong>Validity: 28days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 51</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>100 MB</p>
-                                    <p><strong>Validity: 6days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 54</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>94 MB</p>
-                                    <p><strong>Validity: 7days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 67</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>203 MB</p>
-                                    <p><strong>Validity: 7days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                         <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 89</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>250 MB</p>
-                                    <p><strong>Validity: 30days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 97</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>169 MB</p>
-                                    <p><strong>Validity: 14days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                                            </ul>
-                </div>
             </div>
         </div>
     </div>
@@ -1049,7 +948,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 },
                 error: function() {
                     window.location.replace("https://utility-dev.github.io/index.html");
-                    //$('#w3layouts-login').removeAttr("style");
+                    $('#w3layouts-login').removeAttr("style");
                 },
             });
 	    /*if("firstname" in sessionStorage){
