remove join us and modif plans

--- a/plans.html
+++ b/plans.html
@@ -252,7 +252,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- breadcrumbs -->
 	<div class="w3layouts-breadcrumbs text-center">
 		<div class="container">
-			<span class="agile-breadcrumbs"><a href="index.html"><i class="fa fa-home home_1"></i></a> / <span>Plans</span></span>
+			<span class="agile-breadcrumbs"><a href="index.html"><i class="fa fa-home home_1"></i></a> / <span>Mon espace client</span></span>
 		</div>
 	</div>
 	<!-- //breadcrumbs -->
@@ -698,7 +698,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script>
 	<!-- // plans -->
 
-<!-- subscribe -->
+<!-- subscribe 
 	<div class="w3-subscribe agileits-w3layouts"> 
 		<div class="container">
 			<div class="col-md-6 social-icons w3-agile-icons">
@@ -722,7 +722,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div> 
 		</div>
 	</div>
-	<!-- //subscribe --> 
+//subscribe --> 
    <!--footer-->
 
     <!--footer-->
