--- a/plans.html
+++ b/plans.html
@@ -274,25 +274,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div>
                     <ul class="w3ls-plan">
                         <li>
-                            <a href="pay.html">
+                            <a href="#">
                                 <div class="agile-price">
-                                   <span>Rs. 15</span> 
+                                   <span>Prénom :</span> 
                                 </div>
                                 <div class="valid-agileits">
-                                    <p>Full Talktime Rs.15</p>
-                                    <p><strong>Validity: 2days</strong></p>
+                                    <p><strong>Jean</strong></p>
                                 </div>
                                 <div class="clearfix"></div>
                             </a>
                         </li>
                         <li>
-                            <a href="pay.html">
+                            <a href="#">
                                 <div class="agile-price">
-                                   <span>Rs. 25</span> 
+                                   <span>Nom :</span> 
                                 </div>
                                 <div class="valid-agileits">
-                                    <p>Full Talktime Rs. 25 - 5 Local SMS free - Free SMS valid for 1 day(s)</p>
-                                    <p><strong>Validity: 3days</strong></p>
+                                    <p><strong>Dupont</strong></p>
                                 </div>
                                 <div class="clearfix"></div>
                             </a>
@@ -309,67 +307,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="clearfix"></div>
                             </a>
                         </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 65</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>Full Talktime Rs. 65 - 5 Local SMS free - Free SMS valid for 2 day(s) - Applicable only for 4G</p>
-                                    <p><strong>Validity: 28days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 150</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>Full Talktime Rs. 150 - Applicable only for 4G</p>
-                                    <p><strong>Validity: Unlimited Days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 195</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>Full Talktime Rs. 198 - 5 Local and National SMS free - Free SMS valid for 2 day(s)</p>
-                                    <p><strong>Validity: Unlimited Days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                         <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 500</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>Full Talktime Rs. 500</p>
-                                    <p><strong>Validity: Unlimited Days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="pay.html">
-                                <div class="agile-price">
-                                   <span>Rs. 555</span> 
-                                </div>
-                                <div class="valid-agileits">
-                                    <p>Full Talktime Rs. 555 - 5 Local SMS free - Free SMS valid for 3 day(s)</p>
-                                    <p><strong>Validity: Unlimited Days</strong></p>
-                                </div>
-                                <div class="clearfix"></div>
-                            </a>
-                        </li>
-                                            </ul>
+                    </ul>
                 </div>
                 <div>
                     <ul class="w3ls-plan">
