--- a/plans.html
+++ b/plans.html
@@ -271,7 +271,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li>Mon programme de fidélité</li>
             </ul>
             <div class="resp-tabs-container hor_1">
-                <div>
+                <!--<div>
                     <ul class="w3ls-plan">
                         <li>
                             <a href="#">
@@ -308,6 +308,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </a>
                         </li>
                     </ul>
+                </div>-->
+                <div class="form-group">
+                    <div class="form-field text-field last-name">
+                        <label for="last-name">
+                            <span>Prénom</span>
+                            <input class="" id="last-name" tabindex="1" placeholder="Prénom" maxlength="50" required="required" data-pattern="^[- ',.\pL\d]+$" data-message-required="Le champ prénom est obligatoire." data-message-pattern="Le format du prénom est invalide." name="prenom" type="text" value="Aboubacar" aria-required="true">
+                        </label>
+                    </div>
+                    <div class="form-field text-field first-name">
+                        <label for="first-name">
+                            <span>Nom</span>
+                            <input class="" id="first-name" tabindex="2" placeholder="Nom" maxlength="50" required="required" data-pattern="^[- ',.\pL\d]+$" data-message-required="Le champ nom est obligatoire." data-message-pattern="Le format du nom est invalide." name="nom" type="text" value="Bessenga" aria-required="true">
+                        </label>
+                    </div>
+                    <div class="form-field text-field email">
+                        <label for="email">
+                            <span>Email</span>
+                            <input class="" id="email" placeholder="Email" tabindex="3" autocomplete="off" required="required" data-message-required="Le champ email est obligatoire." data-message-pattern="Le format de l'email est invalide." name="email" type="email" value="bessengaaboubacar@gmail.com" aria-required="true">
+                        </label>
+                    </div>
+                    <div class="form-field text-field phone">
+                        <label for="phone">
+                            <span>Numéro de téléphone mobile</span>
+                            <input class="" id="phone" tabindex="4" maxlength="10" placeholder="Numéro de téléphone mobile" required="required" data-pattern="^0([1-7]|9)\d{8}$" data-message-required="Le champ téléphone mobile est obligatoire." data-message-pattern="Le numéro de téléphone doit contenir 10 chiffres ne commençant pas par 08" name="tel_mobile" type="text" value="0658463995" aria-required="true">
+                        </label>
+                    </div>
+                    <div class="form-field checkbox-field partners">
+                        <label>
+                            <input tabindex="5" name="optin_alloresto" type="checkbox" value="1">
+                            <span>En cochant cette case vous ne recevrez plus les promos Just Eat et ne pourrez pas bénéficier de notre programme de fidélité (5€ offerts envoyés par email toutes les 5 commandes).<br><br>
+                                           Si vous vous êtes désabonné.e précédemment (par exemple via un lien dans un email) ou si vous avez un doute sur votre statut, et que vous souhaitez vous ré-abonner, 
+                                           remplissez le <a target="_blank" href="https://forms.gle/9VyHmcVecUAd55tB8">formulaire suivant</a> afin que nos équipes fassent le nécessaire. 
+                                           <a target="_blank" href="/programme-de-fidelite-conditions"> Plus d'informations ici.</a></span>
+                        </label>
+                    </div>
                 </div>
                 <div>
                     <ul class="w3ls-plan">
