--- a/espace-client.html
+++ b/espace-client.html
@@ -283,14 +283,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<label class="control-label">Prénom</label>
 													<input class="billing-address-name form-control" type="text" name="name" placeholder="John">
 												</div>
-												<div class="w3_agileits_card_number_grids">
-													<div class="w3_agileits_card_number_grid_left">
-														<div class="controls">
+												<div class="controls">
+                                                    <label class="control-label">Nom</label>
+                                                    <input class="billing-address-name form-control" type="text" name="name" placeholder="Moussavou">
+                                                </div>
+                                                <div class="controls">
+                                                    <label class="control-label">E-mail</label>
+                                                    <input class="billing-address-name form-control" type="text" name="name" placeholder="john.moussavou@gmail.com">
+                                                </div>
+                                                <div class="controls">
+                                                    <label class="control-label">Téléphone</label>
+                                                    <input class="billing-address-name form-control" type="text" name="name" placeholder="+2416778765">
+                                                </div>
+                                                <!--
+                                                <div class="w3_agileits_card_number_grids">
+													<div class="w3_agileits_card_number_grid_left">-->
+														<!--<div class="controls">
 															<label class="control-label">Nom</label>
 															<input class="number credit-card-number form-control" type="text" name="number" placeholder="Moussavou">
-														</div>
-													</div>
-													<div class="w3_agileits_card_number_grid_right">
+												<div class="w3_agileits_card_number_grid_right">
 														<div class="controls">
 															<label class="control-label">e-mail</label>
 															<input class="security-code form-control" type="text" name="security-code" placeholder="john.moussavou@gmail.com">
@@ -302,7 +313,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<label class="control-label">Téléphone</label>
 													<input class="expiration-month-and-year form-control" type="text" name="expiration-month-and-year" placeholder="+2416789764">
 												</div>
-											</div>
+											</div>-->
 											<button class="submit"><span>Sauvegarder les modifications<i class="fa fa-long-arrow-right" aria-hidden="true"></i></span></button>
 										</div>
 									</section>
