Modif du footer

--- a/faq.html
+++ b/faq.html
@@ -306,89 +306,86 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	-->
 	<!-- //subscribe --> 
 
-<!--footer-->
-<footer>
-	<div class="container-fluid">
-		<div class="w3-agile-footer-top-at">
-			<div class="col-md-2 agileits-amet-sed">
-				<h4>Compagnie</h4>
-				<ul class="w3ls-nav-bottom">
-					<li><a href="about.html">A propos de nous</a></li>
-					<li><a href="support.html">Contact</a></li>
-					<li><a href="terms.html">Conditions d'utilisation</a></li>
-					<li><a href="faq.html">Faq</a></li>	
-					<!--<li><a href="shortcodes.html">Shortcodes</a></li>
-					<li><a href="icons.html">Icons Page</a></li>-->
-					
-				</ul>	
-			</div>
-			<div class="col-md-3 agileits-amet-sed ">
-				<h4>Recharge Mobile</h4>
-					<ul class="w3ls-nav-bottom">
-						<li><a href="#mobilew3layouts" class="scroll">Airtel</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Azur</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Libertis</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Moov</a></li>
-						<!--<li><a href="#mobilew3layouts" class="scroll">Tata Docomo</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Reliance GSM</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">Reliance CDMA</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">Telenor</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">MTS</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">Jio</a></li>	-->
-					</ul>	
-			</div>
-			<div class="col-md-3 agileits-amet-sed ">
-				<h4>Abonnement Décodeurs</h4>
-				   <ul class="w3ls-nav-bottom">
-						<li><a href="#mobilew3layouts" class="scroll">Canal +</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">IP9</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">IPTV</a></li>
-						<!--<li><a href="#mobilew3layouts" class="scroll">Aircel</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">BSNL</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">MTNL Delhi</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">Vodafone</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">Idea</a></li>	
-						<li><a href="#mobilew3layouts" class="scroll">MTNL Mumbai</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Tata Photon Whiz</a></li>	-->
-					</ul>	
-			</div>
-			<div class="col-md-2 agileits-amet-sed">
-				<h4>Paiement de Factures</h4>
-				<ul class="w3ls-nav-bottom">
-						<li><a href="#mobilew3layouts" class="scroll"> Electricité</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Gas</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Eau</a></li>
-						<!--<li><a href="#mobilew3layouts" class="scroll">Reliance Digital TV Recharges</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Sun Direct Recharges</a></li>
-						<li><a href="#mobilew3layouts" class="scroll">Videocon D2H Recharges</a></li>	-->
-					</ul>	
-			</div>
-            <div class="col-md-2 agileits-amet-sed ">
-				<h4>Options de Paiement</h4>
-				   <ul class="w3ls-nav-bottom">
-						<li>Airtel Money</li>
-						<li>Mobicash</li>
-						<li>MOOV Money</li>
-						<li>Flooz</li>
-						<li>MobiCash</li>							
-					</ul>	
-			</div>
-		<div class="clearfix"> </div>
-		</div>
-    </div>
-	<div class="w3l-footer-bottom">
-		<div class="container-fluid">
-			<div class="col-md-4 w3-footer-logo">
-				<h2><a href="index.html">Utility</a></h2>
-			</div>
-			<div class="col-md-8 agileits-footer-class">
-				<p >© 2017 Online Recharge. All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
-			</div>
-		<div class="clearfix"> </div>
-	 	</div>
-	</div>
-</footer>
-<!--//footer-->
+<<!--footer-->
+    <footer>
+        <div class="container-fluid">
+            <div class="w3-agile-footer-top-at">
+                <div class="col-md-2 agileits-amet-sed">
+                    <h4>Compagnie</h4>
+                    <ul class="w3ls-nav-bottom">
+                        <li><a href="about.html">A propos de nous</a></li>
+                        <li><a href="support.html">Contact</a></li>
+                        <li><a href="terms.html">Conditions d'utilisation</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <!--<li><a href="shortcodes.html">Shortcodes</a></li>
+                    <li><a href="icons.html">Icons Page</a></li>-->
+
+                    </ul>
+                </div>
+                <div class="col-md-3 agileits-amet-sed ">
+                    <h4>Recharge Mobile</h4>
+                    <ul class="w3ls-nav-bottom">
+                        <li><a href="#mobilew3layouts" class="scroll">Airtel</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Libertis</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Moov</a></li>
+                        <!--<li><a href="#mobilew3layouts" class="scroll">Tata Docomo</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Reliance GSM</a></li> 
+                        <li><a href="#mobilew3layouts" class="scroll">Reliance CDMA</a></li>    
+                        <li><a href="#mobilew3layouts" class="scroll">Telenor</a></li>  
+                        <li><a href="#mobilew3layouts" class="scroll">MTS</a></li>  
+                        <li><a href="#mobilew3layouts" class="scroll">Jio</a></li>  -->
+                    </ul>
+                </div>
+                <div class="col-md-3 agileits-amet-sed ">
+                    <h4>Abonnement Décodeurs</h4>
+                    <ul class="w3ls-nav-bottom">
+                        <li><a href="#mobilew3layouts" class="scroll">Canal +</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">IP9</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">IPTV</a></li>
+                        <!--<li><a href="#mobilew3layouts" class="scroll">Aircel</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">BSNL</a></li> 
+                        <li><a href="#mobilew3layouts" class="scroll">MTNL Delhi</a></li>   
+                        <li><a href="#mobilew3layouts" class="scroll">Vodafone</a></li> 
+                        <li><a href="#mobilew3layouts" class="scroll">Idea</a></li> 
+                        <li><a href="#mobilew3layouts" class="scroll">MTNL Mumbai</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Tata Photon Whiz</a></li> -->
+                    </ul>
+                </div>
+                <div class="col-md-2 agileits-amet-sed">
+                    <h4>Factures</h4>
+                    <ul class="w3ls-nav-bottom">
+                        <li><a href="#mobilew3layouts" class="scroll"> Electricité</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Gas</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Eau</a></li>
+                        <!--<li><a href="#mobilew3layouts" class="scroll">Reliance Digital TV Recharges</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Sun Direct Recharges</a></li>
+                        <li><a href="#mobilew3layouts" class="scroll">Videocon D2H Recharges</a></li>   -->
+                    </ul>
+                </div>
+                <div class="col-md-2 agileits-amet-sed ">
+                    <h4>Paiement</h4>
+                    <ul class="w3ls-nav-bottom">
+                        <li>Airtel Money</li>
+                        <li>Mobicash</li>
+                        <li>MobiCash</li>
+                    </ul>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+        <div class="w3l-footer-bottom">
+            <div class="container-fluid">
+                <div class="col-md-4 w3-footer-logo">
+                    <h2><a href="index.html">Utility</a></h2>
+                </div>
+                <div class="col-md-8 agileits-footer-class">
+                    <p>© 2017 Online Recharge. All Rights Reserved | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+    </footer>
+    <!--//footer-->
 <!-- for bootstrap working -->
 		<script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
