--- a/espace-client.html
+++ b/espace-client.html
@@ -288,32 +288,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     <input class="billing-address-name form-control" type="text" name="name" placeholder="Moussavou">
                                                 </div>
                                                 <div class="controls">
-                                                    <label class="control-label">E-mail</label>
-                                                    <input class="billing-address-name form-control" type="text" name="name" placeholder="john.moussavou@gmail.com">
-                                                </div>
-                                                <div class="controls">
                                                     <label class="control-label">Téléphone</label>
                                                     <input class="billing-address-name form-control" type="text" name="name" placeholder="+2416778765">
                                                 </div>
-                                                <!--
-                                                <div class="w3_agileits_card_number_grids">
-													<div class="w3_agileits_card_number_grid_left">-->
-														<!--<div class="controls">
-															<label class="control-label">Nom</label>
-															<input class="number credit-card-number form-control" type="text" name="number" placeholder="Moussavou">
-												<div class="w3_agileits_card_number_grid_right">
-														<div class="controls">
-															<label class="control-label">e-mail</label>
-															<input class="security-code form-control" type="text" name="security-code" placeholder="john.moussavou@gmail.com">
-														</div>
-													</div>
-													<div class="clear"> </div>
-												</div>
-												<div class="controls">
-													<label class="control-label">Téléphone</label>
-													<input class="expiration-month-and-year form-control" type="text" name="expiration-month-and-year" placeholder="+2416789764">
-												</div>
-											</div>-->
 											<button class="submit"><span>Sauvegarder les modifications<i class="fa fa-long-arrow-right" aria-hidden="true"></i></span></button>
 										</div>
 									</section>
@@ -646,7 +623,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         
     jQuery(document).ready(function($) {
             $("#compte").click(function(event) {
-        $(location).attr('href','https://utility-dev.github.io/plans.html');
+        $(location).attr('href','https://utility-dev.github.io/espace-client.html');
             });
         });
         
@@ -672,7 +649,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 cache: false,
                 success: function() {
                   $("#w3layouts-loged").removeAttr("style");
-          $('#w3layouts-loged').html("<a id='compte' data-toggle='modal'  href='https://utility-dev.github.io/plans.html' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='https://utility-dev.github.io/index.html' style='display : inline-block' onClick='sessionStorage.clear();'>Deconnexion</a>"));
+          $('#w3layouts-loged').html("<a id='compte' data-toggle='modal'  href='https://utility-dev.github.io/espace-client.html' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='https://utility-dev.github.io/index.html' style='display : inline-block' onClick='sessionStorage.clear();'>Deconnexion</a>"));
                 },
                 error: function() {
                     window.location.replace("https://utility-dev.github.io/index.html");
